WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293902
[css-anchor-position-1] Anchor fails to register after name mutation
https://bugs.webkit.org/show_bug.cgi?id=293902
Summary
[css-anchor-position-1] Anchor fails to register after name mutation
Antti Koivisto
Reported
2025-06-02 07:26:02 PDT
A bug
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-02 07:28:54 PDT
<
rdar://problem/152430677
>
Antti Koivisto
Comment 2
2025-06-02 07:32:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46210
EWS
Comment 3
2025-06-02 10:07:37 PDT
Committed
295693@main
(6e2329f9f3f5): <
https://commits.webkit.org/295693@main
> Reviewed commits have been landed. Closing PR #46210 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug