[css-anchor-position-1] Anchor fails to register after name mutation https://bugs.webkit.org/show_bug.cgi?id=293902 rdar://problem/152430677

Reviewed by Alan Baradlay.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-animation-dynamic-name-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-transition-name-expected.txt:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::styleWillChange):

There was a logic error here. We only looked into the old style for anchor-name registation.

Canonical link: https://commits.webkit.org/295693@main